# j2gpp

./: .gitignore  LICENSE  README.md  j2gpp.py  pyproject.toml  setup.py  utils.py
j2gpp/: __init__.py  __main__.py  cli.py  config.py  core.py  engine.py  extensions.py  filters.py  globals.py  j2gpp.py  loaders.py  results.py  tests.py  utils.py
